[project]
name = "mcp-pr-analyzer"
version = "0.1.0"
description = "MCP server for PR template analysis and suggestions"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "GitPython>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
mcp-pr-analyzer = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long
